--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-assets/*
-!assets/.gitignore
-protected/runtime/*
-!protected/runtime/.gitignore
-protected/data/*.db
-themes/classic/views/
+.idea/
+.svn/
+php/composer.lock
+php/runtime/
+php/vendor/
+php/config/web.prod.php
+php/config/web.test.php
