--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "overtrue/wechat": "~4.0",
     "dmstr/yii2-adminlte-asset": "^2.0@dev",
     "mdmsoft/yii2-admin": "^2.0@dev",
-    "yiisoft/yii2-redis": "^2.0"
+    "yiisoft/yii2-redis": "^2.0",
+    "yiisoft/yii2-swiftmailer": "^2.1"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.0.0",
