--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "lingyin/wechat",
   "description": "一个微信公众号项目",
   "require": {
+    "php": ">=5.6.0",
     "twinkle/twinkle-api": "^0.0.1",
     "picqer/php-barcode-generator": "^0.2.2",
     "overtrue/wechat": "^4.0",
